separatae test and train before normalize it

--- a/models/svm.ipynb
+++ b/models/svm.ipynb
@@ -268,8 +268,9 @@
     "import numpy as np\n",
     "\n",
     "# Defineix les bandes de freqüència\n",
-    "freq_bands = {'alpha': (8, 13),\n",
-    "              'beta': (13, 30)}\n",
+    "freq_bands = {'alpha': (5, 17)\n",
+    "              #'beta': (13, 30)\n",
+    "              }\n",
     "\n",
     "# Calcula la PSD per a tots els epochs\n",
     "psd = cleaned_epochs.compute_psd(fmin=5, fmax=40, method='welch')\n",
@@ -317,19 +318,13 @@
    "source": [
     "import numpy as np\n",
     "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.model_selection import train_test_split\n",
     "\n",
     "# `features` és la llista de característiques\n",
     "# i `labels` és la llista d'etiquetes.\n",
     "\n",
     "# Convertir les característiques en una matriu\n",
-    "X = np.array([np.concatenate([feat['alpha'], feat['beta']]) for feat in features])\n",
-    "\n",
-    "# Normalitzar les característiques\n",
-    "scaler = StandardScaler()\n",
-    "X_scaled = scaler.fit_transform(X)\n",
-    "\n",
-    "# Mostrar X_scaled\n",
-    "X_scaled\n",
+    "X = np.array([feat['alpha'] for feat in features])\n",
     "\n",
     "# Extreure les etiquetes dels epochs\n",
     "labels = epochs.events[:, -1]\n",
@@ -338,6 +333,18 @@
     "# Això depèn dels IDs d'esdeveniment específics que hem utilitzat per a 'Left Hand' i 'Right Hand'\n",
     "label_map = {10: 0, 11: 1}\n",
     "y = np.array([label_map[label] for label in labels])\n",
+    "\n",
+    "# Dividir les dades en conjunts d'entrenament i prova\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Normalitzar les característiques de l'entrenament\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_test_scaled = scaler.transform(X_test)\n",
+    "\n",
+    "# Mostrar X_scaled\n",
+    "X_train_scaled\n",
+    "X_test_scaled\n",
     "\n",
     "# Mostrar y\n",
     "y"
@@ -360,18 +367,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.svm import SVC\n",
     "from sklearn.metrics import confusion_matrix, accuracy_score, classification_report, cohen_kappa_score\n",
     "\n",
-    "# Dividir les dades en conjunts d'entrenament i prova\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X_scaled, y, test_size=0.2, random_state=42)\n",
-    "\n",
     "# Crear el model SVM\n",
-    "svm_model = SVC(kernel='linear')  # altres kernels: 'linear', 'poly', 'rbf', etc.\n",
+    "svm_model = SVC(kernel='rbf')  # altres kernels: 'linear', 'poly', 'rbf', etc.\n",
     "\n",
-    "# Entrenar el model\n",
-    "svm_model.fit(X_train, y_train)\n",
+    "# Entrenar el model amb dades normalitzades\n",
+    "svm_model.fit(X_train_scaled, y_train)\n",
     "\n",
     "# Fer prediccions amb les dades de prova\n",
     "y_pred = svm_model.predict(X_test)\n",
